--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>2.3.8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
